--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog App</title>
+    <title>Notes App</title>
     <style>
         body{
             display: flex;
@@ -37,7 +37,7 @@
         <h2>Notes App</h2>
         <form action="" id="form">
             <input type="text" placeholder="Title" id="title"><br><br>
-            <textarea name="" id="ta" rows="5" cols="30" placeholder="Your Blog"></textarea><br><br>
+            <textarea name="" id="ta" rows="5" cols="30" placeholder="Your Note"></textarea><br><br>
             <input type="submit" value="Submit" id="btn" onclick="Submit(event)">
         </form>        
     </div>
