--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         }
         
     </style>
-    <script src="todo.js"></script>
+    <script src="notes
+        .js"></script>
 </head>
 <body>
     <div class="blog">
